--- a/less/footer.less
+++ b/less/footer.less
@@ -120,18 +120,17 @@ footer {
       cursor: pointer;
       border: 1px solid white;
       border-radius: 50%;
+      -moz-border-radius: 50%;
+      -webkit-border-radius: 50%;
 
       @media @tablet {
+        margin: 0 3%;
       }
 
       img {
         width: 50px;
         padding: 10px;
       }
-    }
-
-    div:nth-child(even) {
-      margin: 0 3%;
     }
   }
 }
