--- a/less/global.less
+++ b/less/global.less
@@ -41,6 +41,10 @@ img {
   max-width: 100%;
   height: auto;
 }
+label,
+input {
+  -webkit-appearance: none;
+}
 .container {
   max-width: 1440px;
   width: 100%;
